# goit-pythonweb-hw-12

./: .env.test  .gitignore  main.py  pyproject.toml  pytest.ini
alembic/: env.py
docs/: api_config.rst  api_endpoints.rst  api_repository.rst  conf.py  index.rst  rest_api_main.rst
docs/_build/doctrees/: api_config.doctree  api_database.doctree  api_endpoints.doctree  api_repository.doctree  api_services.doctree  environment.pickle  index.doctree  rest_api_main.doctree  schemas.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  api_config.html  api_database.html  api_endpoints.html  api_repository.html  api_services.html  genindex.html  index.html  objects.inv  py-modindex.html  rest_api_main.html  schemas.html  search.html  searchindex.js
docs/_build/html/_sources/: api_config.rst.txt  api_database.rst.txt  api_services.rst.txt  rest_api_main.rst.txt  schemas.rst.txt
src/: schemas.py
src/api/: auth.py  contacts.py  users.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  contacts_in_file.py  users.py  users_in_file.py
src/services/: auth.py  contacts.py  email.py  upload_file.py  users.py
storage/: contacts.json  data.json  users.json
tests/: conftest.py  test_contact_repository_unit.py  test_integration_auth.py  test_integration_contacts.py  test_integration_users.py
