[project]
name = "goit-pythonweb-hw-12"
version = "0.1.0"
description = ""
authors = [
    {name = "IYgit",email = "novemb75@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "psycopg2 (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic[email] (>=2.11.2,<3.0.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "sphinx (>=8.2.3,<9.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "fastapi-mail (>=1.4.2,<2.0.0)",
    "aiocache (>=0.12.3,<0.13.0)",
    "libgravatar (>=1.0.4,<2.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "cloudinary (>=1.44.0,<2.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]

[tool.poetry]
packages = [{include = "hw10", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
